--- a/src/App.css
+++ b/src/App.css
@@ -5,21 +5,21 @@ body {
 }
 
 header {
-    background-color: var(--lavender);
+    background-color: antiquewhite;
     display: flex;
     flex-wrap: wrap;
     top: 0;
-    padding: 0 30px 0 0;
+    padding: 0 50px 0 0;
 }
 
-header a {
+/* header a {
     text-decoration: none;
-    color: teal;
-}
+    color: darkgoldenrod;
+    padding-left: 50px;
+} */
 
 header nav {
     margin: 10px auto;
-    background-color: antiquewhite;
 }
 
 header nav ul {
@@ -32,8 +32,8 @@ header nav ul {
 
 header nav ul li a {
     font-weight: bold;
-    font-size: 20px;
-    color: teal;
+    font-size: 28px;
+    color: darkgoldenrod;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-decoration: none;
     padding: 0px 50px 0 50px;
