--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,21 @@ header nav ul li a {
     text-decoration: none;
     padding: 0px 50px 0 50px;
 }
+
+footer {
+    background-color: antiquewhite;
+    padding: auto;
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
+footer a {
+    padding: 5px;
+}
+
+.copyright {
+    display: inline;
+    padding: 30px 20px 0 0;
+    font-weight: bold;
+    float: right;
+}
