--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,34 @@ header nav ul li a {
     padding: 0px 50px 0 50px;
 }
 
+.contact-me {
+    display: flex;
+    justify-content: center;
+}
+
+.contact {
+    font-size: 20px;
+    line-height: 1.3;
+    width: 50%;
+}
+
+.contact a {
+    text-decoration: none;
+}
+
+.section-title {
+    font-size: 20px;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+#contact-form {
+    display: block;
+    
+
+}
+
 footer {
     background-color: antiquewhite;
     padding: auto;
