--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
     background-size: 100%;
 }
 
+/* HEADER AND NAV START */
 header {
     background-color: #36454F;
     display: flex;
@@ -11,12 +12,6 @@ header {
     top: 0;
     padding: 0 50px 0 0;
 }
-
-/* header a {
-    text-decoration: none;
-    color: darkgoldenrod;
-    padding-left: 50px;
-} */
 
 header nav {
     margin: 10px auto;
@@ -29,8 +24,6 @@ header nav ul {
     align-items: center;
     list-style: none;
 }
-
-/* header nav ul li a */
 
 .nav-link {
     font-weight: bold;
@@ -45,10 +38,9 @@ header nav ul {
     color: lightblue;
 }
 
-/* .project1 {
-    justify-content: center;
-    display: inline-block;
-} */
+/* HEADER AND NAV END */
+
+/* ABOUT ME START */
 
 .portrait {
     display: flex;
@@ -70,6 +62,15 @@ header nav ul {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+/* ABOUT ME END */
+
+/* CONTACT START */
+
+.contact p {
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .contact a {
     text-decoration: none;
 }
@@ -84,7 +85,9 @@ header nav ul {
 .contact-form {
     padding-left: 20%;
 }
-.contact-form input, .contact-form textarea {
+
+.contact-form input,
+.contact-form textarea {
     border: 1px solid black;
     display: block;
     padding: 6px 30px;
@@ -104,6 +107,10 @@ header nav ul {
     border-radius: 10px;
     margin-bottom: 20px;
 }
+
+/* CONTACT END */
+
+/* PORTFOLIO START */
 
 .projects {
     margin-left: 100px;
@@ -138,6 +145,9 @@ header nav ul {
     margin-right: 30px;
 }
 
+/* PORTFOLIO END */
+
+/* RESUME START */
 .resume {
     text-align: center;
 }
@@ -145,6 +155,10 @@ header nav ul {
 .skills {
     padding-left: 20%;
 }
+
+/* RESUME END */
+
+/* FOOTER START */
 footer {
     background-color: white;
     padding: auto;
@@ -167,3 +181,5 @@ footer a {
     font-weight: bold;
     float: right;
 }
+
+/* FOOTER END */
