--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+  }
+
 body {
     background-image: url("assets/img/Portfolio-background.jpg");
     background-color: lavender;
@@ -66,13 +76,20 @@ header nav ul {
 
 /* CONTACT START */
 
+.contactMe {
+    display: grid;
+    grid-template-columns: 30% 60%;
+    gap: 12%;
+}
+
+.myEmail {
+    color: black;
+    text-decoration: dashed underline;
+}
+
 .contact p {
     font-weight: bold;
     font-size: 20px;
-}
-
-.contact a {
-    text-decoration: none;
 }
 
 .section-title {
