--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
+:root {
+    --primary-color: #dfa317;
+    --second-color: #dfAE3b;
+    --third-color: #035642; 
+}
+
 * {
     margin: 0;
     padding: 0;
-    border: 0;
-    outline: 0;
-    box-sizing: border-box;
-    list-style: none;
     text-decoration: none;
   }
 
@@ -177,12 +179,13 @@ header nav ul {
 
 /* FOOTER START */
 footer {
-    background-color: white;
+    background-color: antiquewhite;
     padding: auto;
+    position: fixed;
 }
 
 footer a {
-    padding: 5px;
+    padding: 5px 0 5px 20px;
 }
 
 .flex-wrapper {
@@ -194,9 +197,10 @@ footer a {
 
 .copyright {
     display: inline;
-    padding: 30px 20px 0 0;
+    padding: 30px 30px 0 0;
     font-weight: bold;
     float: right;
+    font-size: 25px;
 }
 
 /* FOOTER END */
