--- a/src/App.css
+++ b/src/App.css
@@ -74,8 +74,8 @@ header nav ul {
 }
 
 .portrait img {
-    border: 8px dotted var(--accent-orange);
-    border-radius: 400px;
+    border: 9px dotted var(--accent-orange);
+    border-radius: 300px;
     width: auto;
     height: 400px;
     margin: 0 10px 20px 60px;
@@ -124,7 +124,7 @@ header nav ul {
     flex-direction: column;
     width: 100%;
     padding-top: 25px;
-    padding: 3%;
+    padding: 3% 3% 7% 3%;
     font-family: 'Merriweather', serif;
 }
 
@@ -246,29 +246,32 @@ header nav ul {
 /* RESUME END */
 
 /* FOOTER START */
-footer {
+ footer {
     background-color: var(--accent-orange);
-    padding: auto;
+    bottom: 0;
+    height: 50px;
     position: fixed;
+    width: 100%;
+    align-items: center;
 }
 
-footer a {
-    padding: 5px 0 5px 20px;
+.allIcons {
+    justify-content: space-evenly;
+    margin: auto;
 }
 
-.flex-wrapper {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: space-between;
+.socialIcons {
+    height: 40px;
+    align-items: center;
+    padding: 0 15px;
 }
 
 .copyright {
-    display: inline;
-    padding: 30px 30px 0 0;
+    margin: auto;
     font-weight: bold;
-    float: right;
-    font-size: 25px;
+    color: var(--dark);
+    align-items: center;
+    justify-content: flex-end;
 }
 
 /* FOOTER END */
