--- a/src/App.css
+++ b/src/App.css
@@ -401,8 +401,8 @@ footer {
     }
 
     .allInterests {
-       flex-direction: column;
-       padding-bottom: 5%;
+        flex-direction: column;
+        padding-bottom: 5%;
     }
 
     .contactMe {
@@ -415,6 +415,10 @@ footer {
 
     .contact-form {
         margin: auto;
+    }
+
+    .contacts {
+        width: 30%;
     }
 }
 
@@ -431,4 +435,8 @@ footer {
 }
 
 /*MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 625px) {}
+@media screen and (max-width: 690px) {
+    .contacts {
+        width: 40%;
+    }
+}
