--- a/src/App.css
+++ b/src/App.css
@@ -285,7 +285,7 @@ header nav ul {
 .btns {
     display: inline;
     justify-content: center;
-    gap: 1rem;
+    margin: 0 3% 2% 3%;
 }
 
 .githubLink {
@@ -304,6 +304,7 @@ header nav ul {
     font-size: 16px;
     border: none;
     border-radius: 10px;
+    float: right;
 }
 
 /* PORTFOLIO END */
